--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,30 @@
  *
  * Made By MaterializeCSS.com
  */
+ .about-circle-one {
+   width: 170px;
+   height: 170px;
+   border-radius: 100px;
+   background: teal;
+   opacity: 0.6;
+ }
+
+ .about-circle-two {
+  width: 170px;
+  height: 170px;
+  border-radius: 100px;
+  background: teal;
+  opacity: 0.6;
+}
+
+.about-circle-tree {
+  width: 170px;
+  height: 170px;
+  border-radius: 100px;
+  background: teal;
+  opacity: 0.6;
+}
+
  .carousel .indicators .indicator-item  {
    background-color: gray;
  }
